--- a/Portfolio/appsettings.json
+++ b/Portfolio/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PortfolioContext": "Server=(localdb)\\mssqllocaldb;Database=PortfolioContext-7dc5;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
